# Spice-LSP

./: README.md  pyproject.toml  setup.py
spice_lsp/: __init__.py  server.py
