[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spice-lsp"
version = "0.2.3"
description = "Language Server Protocol implementation for Spice language"
authors = [
    { name = "Reclipse" }
]
requires-python = ">=3.8"
dependencies = [
    "pygls>=1.0.0",
    "lsprotocol>=2023.0.0",
    "spice-lang>=0.2.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

[project.scripts]
spice-lsp = "spice_lsp.server:start_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["spice_lsp*"]
